trying to resolve the overflow scoll to contats list

--- a/resources/sass/globals/_table.scss
+++ b/resources/sass/globals/_table.scss
@@ -3,14 +3,15 @@
 *********************************************/
 
 .table {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
     width: 100%;
 
     &__head {
         width: 100%;
-        display: grid;
-        align-items: start;
-        margin-bottom: 5px;
+        display: block;
+        margin-bottom: 6px;
 
         &__line {
             display: grid;
@@ -54,21 +55,20 @@
     }
 
     &__body {
-        display: flex;
-        flex-direction: column;
+        display: grid;
+        grid-template-rows: 1fr;
         gap: 5px;
         width: 100%;
-        overflow: scroll;
+        overflow-y: scroll;
 
         &__line {
             width: 100%;
             display: grid;
+            grid-template-rows: 50px;
             align-items: center;
             justify-items: start;
             background-color: $white;
             border-radius: 10px;
-            padding-top: 10px;
-            padding-bottom: 10px;
 
             &--contacts {
                 grid-template-columns: 1fr 1fr 1fr 1fr 1fr 5fr;
@@ -82,8 +82,6 @@
 
             &__cell {
                 text-align: left;
-                vertical-align: middle;
-
                 font-family: $textFont;
                 font-size: $smallSize;
                 color: $lightBlack;
