--- a/resources/sass/layouts/_app.scss
+++ b/resources/sass/layouts/_app.scss
@@ -8,11 +8,13 @@
 
     &__contentContainer {
         display: flex;
-        flex-direction: row;
 
         &__main {
+            display: flex;
+            flex-direction: column;
             margin: 20px 20px 20px 20px;
             width: 100%;
+            height: calc(100vh - 40px);
         }
     }
 }
