--- a/resources/sass/pages/_contacts.scss
+++ b/resources/sass/pages/_contacts.scss
@@ -6,6 +6,9 @@
     width: 100%;
 
     &__contentContainer {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
         width: 100%;
 
         &__header {
